[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Levels/Recursion/3 - Cross.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=8]

[node name="3 - Cross" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Grid" parent="." instance=ExtResource( 3 )]

[node name="Level Control" parent="." instance=ExtResource( 4 )]

[node name="IDE" parent="." instance=ExtResource( 5 )]

[node name="CodeBlockBar" parent="." instance=ExtResource( 7 )]

[node name="PopupMenu" parent="." instance=ExtResource( 6 )]

[node name="TextBox" parent="." instance=ExtResource( 8 )]
